--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -78,9 +78,12 @@ main {
     margin: auto;
 }
 
+section {
+    margin-top: 130px;
+}
+
 /* About section styles */
 .about {
-    margin-top: 130px;
     background: #fff8f3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -88,12 +91,14 @@ main {
 }
 
 .section-title {
+    text-align: center;
     font-weight: 700;
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .section-description {
+    text-align: center;
     color: #757575;
     font-size: 18px;
     margin-bottom: 30px;
@@ -115,3 +120,29 @@ main {
     font-size: 20px;
     color: #474747;
 }
+
+/* WHAT I DO STYLES*/
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    background-color: #ffffff;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    color: #757575;
+}
+
+/* Resume styles */
